--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "typescript-eslint": "^8.23.0"
     },
     "dependencies": {
+        "@cloudinary/react": "^1.14.3",
+        "@cloudinary/url-gen": "^1.21.0",
         "@emailjs/browser": "^4.4.1",
         "@headlessui/react": "^2.2.0",
         "@inertiajs/react": "^2.0.0",
